# etfmaster

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  UPDATE_DEPLOYMENT.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: etf-sync.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: etf.py
backend/app/routers/: chat.py  etfs.py
backend/app/schemas/: chat.py  etf.py
backend/app/services/: etf_data_fetcher.py  etf_list_provider.py  etf_sync_service.py
backend/app/tasks/: scheduler.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatBot.tsx  EtfDashboard.tsx  EtfTable.tsx  EtfTableColumns.tsx  SearchBar.tsx  StatsBar.tsx  Tooltip.tsx
frontend/src/hooks/: useEtfData.ts
frontend/src/lib/: api.ts  formatters.ts
frontend/src/types/: etf.ts
scripts/: sync_and_push.py
