[project]
name = "etfmaster-backend"
version = "0.1.0"
description = "US ETF Information Dashboard Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.40",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
